--- a/Paginas_Inicio/templates/Paginas_Inicio/pag_principal.html
+++ b/Paginas_Inicio/templates/Paginas_Inicio/pag_principal.html
@@ -17,7 +17,7 @@
             <div class="carousel" id="carousel">
                 <div class="cards-container" id="cardsContainer">
 
-                    <div class="card" data-subject="fisica" onclick="window.location.href='{% url 'lista_examenes_curso' 'fisica' %}'">
+                    <div class="card" data-subject="fisica" onclick="window.location.href='#'">
                         <div class="card-icon">
                             <div class="icon physics-icon">⚛</div>
                         </div>
@@ -25,7 +25,7 @@
                         <p class="card-subtitle">6 | todo</p>
                     </div>
 
-                    <div class="card" data-subject="geometria" onclick="window.location.href='{% url 'lista_examenes_curso' 'geometria' %}'">
+                    <div class="card" data-subject="geometria" onclick="window.location.href='#'">
                         <div class="card-icon">
                             <div class="icon geometry-icon">📐</div>
                         </div>
@@ -33,7 +33,7 @@
                         <p class="card-subtitle">5 | todo</p>
                     </div>
 
-                    <div class="card" data-subject="algebra" onclick="window.location.href='{% url 'lista_examenes_curso' 'algebra' %}'">
+                    <div class="card" data-subject="algebra" onclick="window.location.href='#'">
                         <div class="card-icon">
                             <div class="icon algebra-icon">💬</div>
                         </div>
@@ -41,7 +41,7 @@
                         <p class="card-subtitle">8 | todo</p>
                     </div>
 
-                    <div class="card" data-subject="quimica" onclick="window.location.href='{% url 'lista_examenes_curso' 'quimica' %}'">
+                    <div class="card" data-subject="quimica" onclick="window.location.href='#'">
                         <div class="card-icon">
                             <div class="icon chemistry-icon">⚗</div>
                         </div>
@@ -49,7 +49,7 @@
                         <p class="card-subtitle">6 | todo</p>
                     </div>
 
-                    <div class="card" data-subject="biologia" onclick="window.location.href='{% url 'lista_examenes_curso' 'biologia' %}'">
+                    <div class="card" data-subject="biologia" onclick="window.location.href='#'">
                         <div class="card-icon">
                             <div class="icon biology-icon">🧬</div>
                         </div>
