--- a/M2_Contenido_Educativo/templates/repositorio/add_universidad.html
+++ b/M2_Contenido_Educativo/templates/repositorio/add_universidad.html
@@ -11,7 +11,7 @@
 <div class="form-container">
     <h1>{% if form.instance.pk %}Editar Universidad{% else %}Agregar Universidad{% endif %}</h1>
 
-    <form method="POST" enctype="multipart/form-data" class="formulario-universidad">
+    <form method="POST" enctype="multipart/form-data" class="formulario-universidad">s
         {% csrf_token %}
 
         <div class="form-field">
