--- a/Paginas_Inicio/templates/Paginas_Inicio/pag_principal.html
+++ b/Paginas_Inicio/templates/Paginas_Inicio/pag_principal.html
@@ -90,5 +90,5 @@
     </div>
 </div>
 
-<script src="{% static 'Paginas_Inicio/Pag_principal/principal.js' %}"></script>
+<script src="{% static 'Paginas_Inicio/Pag_principal/principal.js' %}" defer></script>
 {% endblock %}
