--- a/Paginas_Inicio/templates/Paginas_Inicio/base.html
+++ b/Paginas_Inicio/templates/Paginas_Inicio/base.html
@@ -12,13 +12,7 @@
 <body>
     {% block content %}
     {% endblock %}
-
-    <!-- Toggle Button -->
-    <button class="navbar-toggle" id="navbarToggle">
-        <span class="toggle-icon">&lt;</span>
-    </button>
-
-    <!-- Bottom Navbar - Diferente según el rol del usuario -->
+    
     <nav class="bottom-navbar" id="bottomNavbar">
         {% if user.is_authenticated %}
             {% with user.usuariorol_set.first as ur %}
@@ -43,9 +37,9 @@
                             </svg>
                             Eventos
                         </a>
-                        <a href="{% url 'perfil_usuario' %}" class="nav-item active" data-page="perfil">
+                        <a href="{% url 'perfil_usuario' %}" class="nav-item" data-page="perfil">
                             <svg class="nav-icon" viewBox="0 0 24 24">
-                                <path d="M21 15.5c-.621-1.327-2.087-2.5-4.5-2.5s-3.879 1.173-4.5 2.5"/>
+                                <path d="M12 12c2.21 0 4-1.79 4-4S14.21 4 12 4 8 5.79 8 8s1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                             </svg>
                             Perfil
                         </a>
@@ -56,8 +50,8 @@
                             Principal
                         </a>
                         <a href="#" class="nav-item" data-page="comunidad">
-                        <svg class="nav-icon" viewBox="0 0 24 24">
-                                <path d="M16 4c0-1.11.89-2 2-2s2 .89 2 2-.89 2-2 2-2-.89-2-2zM4 18v-1c0-1.38.56-2.63 1.46-3.54l.64-.64.78.78c-.92.92-1.48 2.19-1.48 3.58v1H4zM12.5 11.5c.83 0 1.5-.67 1.5-1.5s-.67-1.5-1.5-1.5S11 9.17 11 10s.67 1.5 1.5 1.5zM8.5 12A1.5 1.5 0 0010 13.5 1.5 1.5 0 008.5 15 1.5 1.5 0 007 13.5 1.5 1.5 0 008.5 12z"/>
+                            <svg class="nav-icon" viewBox="0 0 24 24">
+                                <path d="M16 11c1.66 0 3 1.34 3 3v3H5v-3c0-1.66 1.34-3 3-3h8zm0-2c1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 3-1.34 3-3S9.66 3 8 3 5 4.34 5 6s1.34 3 3 3z"/>
                             </svg>
                             Comunidad
                         </a>
@@ -69,9 +63,7 @@
                         </a>
                         <a href="#" class="nav-item" data-page="ayuda">
                             <svg class="nav-icon" viewBox="0 0 24 24">
-                                <circle cx="12" cy="12" r="10"/>
-                                <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
-                                <line x1="12" y1="17" x2="12.01" y2="17"/>
+                                <path d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm1 17h-2v-2h2v2zm1.07-7.75-.9.92A1.49 1.49 0 0 0 13 14h-2v-.5c0-.4.16-.78.44-1.06l1.1-1.1a2 2 0 1 0-3.54-1.33H7a4 4 0 0 1 8 0c0 1.1-.45 2.1-1.17 2.83z"/>
                             </svg>
                             Ayuda
                         </a>
@@ -95,9 +87,9 @@
                             </svg>
                             Eventos
                         </a>
-                        <a href="{% url 'perfil_usuario' %}" class="nav-item" data-page="perfil" data-tooltip="perfil">
+                        <a href="{% url 'perfil_usuario' %}" class="nav-item" data-page="perfil">
                             <svg class="nav-icon" viewBox="0 0 24 24">
-                                <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+                                <path d="M12 12c2.21 0 4-1.79 4-4S14.21 4 12 4 8 5.79 8 8s1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                             </svg>
                             Perfil
                         </a>
@@ -107,9 +99,9 @@
                             </svg>
                             Principal
                         </a>
-                        <a href="#" class="nav-item" data-page="comunidad" data-tooltip="comunidad">
+                        <a href="#" class="nav-item" data-page="comunidad">
                             <svg class="nav-icon" viewBox="0 0 24 24">
-                                <path d="M16 4c0-1.11.89-2 2-2s2 .89 2 2-.89 2-2 2-2-.89-2-2zM4 18v-1c0-1.38.56-2.63 1.46-3.54l.64-.64.78.78c-.92.92-1.48 2.19-1.48 3.58v1H4zM12.5 11.5c.83 0 1.5-.67 1.5-1.5s-.67-1.5-1.5-1.5S11 9.17 11 10s.67 1.5 1.5 1.5zM8.5 12A1.5 1.5 0 0010 13.5 1.5 1.5 0 008.5 15 1.5 1.5 0 007 13.5 1.5 1.5 0 008.5 12z"/>
+                                <path d="M16 11c1.66 0 3 1.34 3 3v3H5v-3c0-1.66 1.34-3 3-3h8zm0-2c1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 3-1.34 3-3S9.66 3 8 3 5 4.34 5 6s1.34 3 3 3z"/>
                             </svg>
                             Comunidad
                         </a>
@@ -119,11 +111,9 @@
                             </svg>
                             Progreso
                         </a>
-                        <a href="#" class="nav-item" data-page="ayuda" data-tooltip="ayuda">
+                        <a href="#" class="nav-item" data-page="ayuda">
                             <svg class="nav-icon" viewBox="0 0 24 24">
-                                <circle cx="12" cy="12" r="10"/>
-                                <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
-                                <line x1="12" y1="17" x2="12.01" y2="17"/>
+                                <path d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm1 17h-2v-2h2v2zm1.07-7.75-.9.92A1.49 1.49 0 0 0 13 14h-2v-.5c0-.4.16-.78.44-1.06l1.1-1.1a2 2 0 1 0-3.54-1.33H7a4 4 0 0 1 8 0c0 1.1-.45 2.1-1.17 2.83z"/>
                             </svg>
                             Ayuda
                         </a>
