--- a/M1_Gestion_de_Usuarios/templates/M1_Gestion_de_Usuarios/login.html
+++ b/M1_Gestion_de_Usuarios/templates/M1_Gestion_de_Usuarios/login.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- Botón flotante para volver -->
-  <div class="back-button" onclick="window.history.back()">
+  <div class="back-button" onclick="window.location.href='{% url 'descripcion' %}'">
     <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
     </svg>
